2001-07-30  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* pairs.h (SCM_VALIDATE_PAIR):  Use SCM_CONSP, not SCM_ECONSP.

2001-07-29  Marius Vollmer  <mvo@zagadka.ping.de>

	Removed vcell slot from structs.
	
	* struct.h (scm_vtable_index_vcell): Removed.  Renumbered
	subsequent indices.

	* struct.c (scm_struct_vtable_p): Do not check vcell slot for
	zero.  Use scm_vtable_index_layout instead of "0" when accessing
	said slot.
	(scm_init_struct): Remove vcell slot layout code from
	required_vtable_fields.

	* objects.h (scm_si_redefined, scm_si_hashsets): Renumbered.

	* goops.c (build_class_class_slots): Removed vcell slot
	definition.

	* goops.h: Renumbered slot indices. (SCM_CLASS_CLASS_LAYOUT):
	Removed vcell slot layout code.
	(scm_si_vcell): Removed.

2001-07-26  Marius Vollmer  <mvo@zagadka.ping.de>

	"Glocs" have been removed.
	
	* tags.h: Update tag system docs.
	(scm_tc3_cons_gloc): Renamed to scm_tc3_struct.  Changed all uses.
	(scm_tcs_cons_gloc): Renamed to scm_tcs_struct.  Changed all uses.
	(SCM_ECONSP, SCM_NECONSP): Removed.  Changed all uses to SCM_CONSP
	or SCM_NCONSP, respectively.

	* struct.c, struct.h, srcprop.c, procs.c, procprop.c, print.c,
	objects.c. modules.c, goops.c, eval.c, debug.c: Changed all uses
	of scm_tc3_cond_gloc and scm_tcs_cons_gloc.  See above.

	* print.c (scm_iprin1): Remove printing of glocs.  Do not try to
	tell glocs from structs.
	
	* gc.c (scm_gc_mark, scm_gc_sweep): Remove handling of glocs.

	* eval.c (scm_m_atbind): Make a list of variables, not glocs.
	(scm_ceval, scm_deval): For SCM_IM_BIND, fiddle with variables
	instead of with glocs.
	(EVALCAR): Do not test for glocs.
	(scm_lookupcar, scm_lookupcar1): Do not handle glocs in race
	condition.
	(scm_unmemocar): Do not handle glocs.
	(scm_m_atfop): Memoize as a variable, not as a gloc.
	(scm_eval_args, scm_deval_args): Do not handle glocs.
	(scm_ceval, scm_deval): Likewise.
	
	* eval.h (SCM_XEVALCAR): Do not test for glocs.